Update_in_the_question.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ But it must have the following features:
   Hint: Set the image to have a width of 100% so it fills the div. 
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
+WRITE YOUR SOLLUTION BELOW :- 
 -->
 <!DOCTYPE html>
 <html lang="en">
